fix: add analyze-tool-and-scene-info-container utility class to maintain consistent spacing for Analyze tools and SceneInfo ref #56

--- a/src/shared/styles/index.css
+++ b/src/shared/styles/index.css
@@ -29,6 +29,10 @@
     .is-disabled {
         @apply opacity-50 pointer-events-none;
     }
+
+    .analyze-tool-and-scene-info-container {
+        @apply w-analysis-tool-container-width mx-6 3xl:mx-16;
+    }
 }
 
 #root .esri-view-root {
